--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,6 @@ jobs:
 #    - name: Restore dependencies
 #      run: dotnet restore
     - name: Build
-      run: dotnet publish --configuration release
+      run: dotnet publish --configuration release -o D:\sample-webapi-output
 #    - name: Test
 #      run: dotnet test --no-build --verbosity normal
