--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet publish --configuration release -o C:\inetpub\sample-webapi-output
+      run: dotnet publish --configuration release
 #    - name: Test
 #      run: dotnet test --no-build --verbosity normal
 
